Actualización del proyecto

--- a/pages/updates.html
+++ b/pages/updates.html
@@ -74,7 +74,14 @@
 
 
 <div class="contenedordeimg">
-    <div class="griditem"><img src="../img/updates/1.jpg" alt=""></div>
+  <figure>
+    <!--<div class="griditem">--><img src="../img/updates/1.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+
     <div class="griditem"><img src="../img/updates/2.jpg" alt=""></div>
     <div class="griditem"><img src="../img/updates/3.jpg" alt=""></div>
     <div class="griditem"><img src="../img/updates/4.jpg" alt=""></div>
