actualizacion de repositorio

--- a/pages/updates.html
+++ b/pages/updates.html
@@ -75,29 +75,127 @@
 
 <div class="contenedordeimg">
   <figure>
-    <!--<div class="griditem">--><img src="../img/updates/1.jpg" alt="">
+    <img src="../img/updates/1.jpg" alt="">
       <div class="capa">
         <h3>info</h3>
       <p>Lorem ipsum dolor sit amet.</p>
       </div>
   </figure>
+  <figure>
+    <img src="../img/updates/2.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/3.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/4.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/5.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/6.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/7.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/8.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/9.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/10.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/11.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/12.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/13.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/14.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/15.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/16.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  <figure>
+    <img src="../img/updates/17.jpg" alt="">
+      <div class="capa">
+        <h3>info</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+  </figure>
+  
+  
 
-    <div class="griditem"><img src="../img/updates/2.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/3.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/4.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/5.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/6.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/7.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/8.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/9.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/10.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/11.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/12.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/13.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/14.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/15.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/16.jpg" alt=""></div>
-    <div class="griditem"><img src="../img/updates/17.jpg" alt=""></div>
 
 
 </div>   
